--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -49,7 +49,7 @@ include_graphics(path = "figure/Intro_background/BMI_MR_RCT_CVevent.png", dpi = 
 ```
 
 ## The genetics of obesity
-As indicated above, Mendelian randomisation can be used to estimate the causal relationship of BMI on various outcomes. There are strong correlations between BMI and more direct measures of fat mass measured by dual-energy X-ray absorptiometry (DXA)[@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene[@Zhang1994] lead to mice having obesity. This was later discovered to be because leptin was secreted by adipose tissue and was found to influence food consumption[@Friedman1998]. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals[@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly larger cohort sizes[@Locke2015], with the largest and most recent GWAS performed in 2018 by Yengo et al.[@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations[@Yengo2018].
+As indicated above, Mendelian randomisation can be used to estimate the causal relationship of BMI on various outcomes. There are strong correlations between BMI and more direct measures of fat mass measured by dual-energy X-ray absorptiometry (DXA)[@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene[@Zhang1994] led to mice having obesity. This was later discovered to be because leptin was secreted by adipose tissue and was found to influence food consumption[@Friedman1998]. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals[@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly larger cohort sizes[@Locke2015], with the largest and most recent GWAS performed in 2018 by Yengo et al.[@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations[@Yengo2018].
 
 ## Types of CVD
 As indicated in section \@ref(CVD-stats), CHD and stroke affect millions of people worldwide every year. CVD is used as a term to describe the group of diseases which affect the heart or blood vessels. Within CVD there are various diseases which range in their clinical presentation and pathology. CHD (also referred to as coronary artery disease (CAD) or ischaemic heart disease (IHD)) is caused by a build up of plaques in the arteries (atherosclerosis). These plaques are caused by low density lipoproteins (LDLs) accumulating in the intima of the arteries, where they undergo oxidation[@Bentzon2014]. This then activates immune response and macrophages and lymphocytes also accumulate within the intima[@Badimon2012]. The plaques build in size and may eventually rupture the endothelium, initiating platelet activation and thrombus formation (arterial thrombosis, Figure \@ref(fig:thrombi-cartoon)A), thereby causing a heart attack. Other types of CVD include stroke, which can be either ischaemic (another form of arterial thrombosis) or haemorrhagic. Arterial thrombi are estimated to be composed of 31% platelets[@Chernysh2020].
