--- a/index/05-chap5.Rmd
+++ b/index/05-chap5.Rmd
@@ -39,12 +39,7 @@ Platelets likely contribute to the increased CVD risk related to obesity and typ
 
 There are other biomarkers which are also suggested to be raised with obesity as a result of low-grade chronic inflammation[@Esser2014], including the chemokines macrophage-derived chemokine (MDC/CCL22) and thymus and activation regulated chemokine (TARC/CCL17)[@Safa2016]. These inflammatory chemokines act at the receptor CCR4, which is expressed on platelets[@Clemetson2000]. MDC and TARC have been shown to potentiate platelet aggregation[@Gear2001]. For example, the presence of TARC and MDC have been demonstrated to greatly enhance platelet aggregation in the presence of low levels of the platelet agonist ADP[@Gear2001]. Furthermore, gene polymorphisms of MDC and CCR4 are associated with myocardial infarction (MI), therefore implicating MDC in thrombosis pathophysiology[@Noori2018]. Previous studies have shown that multiple platelet primers increase platelet function through activation of the lipid kinase phosphoinositide-3-kinase (PI3K)[@Blair2015; @Pasquet2000; @Falcinelli2005].  Another pathway that has been implicated in platelet priming effects is the mitogen-activated protein kinase (MAPK) pathway. TPO can enhance thromboxane A~2~ (TxA~2~) synthesis through increasing the activation of extracellular signal regulated kinase (ERK2)[@Ezumi1998; @VanWilligen2000]. The common involvement of both PI3K and MAPK pathways in platelet priming mediated by IGF-1, TPO and matrix metalloproteinase-2 (MMP-2) suggests that MDC and TARC could also exert priming effects through these common pathways. 
 
-As blood/plasma levels of MDC have been reported to be elevated in obese people[@Safa2016] and polymorphisms of its receptor are associated with MI, understanding the mechanisms by which MDC can enhance platelet function may provide important insight in to how platelets are hyperactive in obesity and potentially provide a novel target for new antiplatelet/thrombotic or preventative therapies for those with an increased risk of cardiovascular events.
-
-The aims of this chapter are therefore to:
-
-1) Determine the effects and mechanisms of MDC and TARC on platelet function and signalling.
-2) Explore the effect of increasing levels of MDC and TARC on disease using two sample Mendelian randomisation.
+As blood/plasma levels of MDC have been reported to be elevated in obese people[@Safa2016] and polymorphisms of its receptor are associated with MI, understanding the mechanisms by which MDC can enhance platelet function may provide important insight in to how platelets are hyperactive in obesity and potentially provide a novel target for new antiplatelet/thrombotic or preventative therapies for those with an increased risk of cardiovascular events. The aims of this chapter were therefore to determine the effects and mechanisms of MDC and TARC on platelet function and signalling and explore the effect of increasing levels of MDC and TARC on disease using two sample Mendelian randomisation.
 
 Figure \@ref(fig:chemokine-platelet-graphic) indicates the parts of the overal thesis hypthoses which are addressed in the current chapter.
 
