--- a/index/06-chap6.Rmd
+++ b/index/06-chap6.Rmd
@@ -41,7 +41,7 @@ The previous chapters (Chapter \@ref(BMI-platelets-INTERVAL) and Chapter \@ref(B
 
 A benefit of studying the systematic effects of BMI on the circulating proteome is that proteins are often more suitable pharmacological targets than metabolites. Efforts to study the effect of BMI on the proteome have generally been in an observational framework[@Cominetti2018]. It is estimated that 25% of proteins in the human proteome circulate in blood[@Gold2012], which is important as the majority of druggable targets are such proteins[@Imming2006]. Studying the effect of BMI on a large set of proteins has only recently become possible with newly developed proteomic technologies such as the SomaLogic platform, with the ability to quantify enzymes, protein kinases and transport proteins with unprecedented sensitivity[@Rohloff2014]. Utilisation of SomaLogic within a trial or cohort setting has recently become more widespread, such as within the INTERVAL study, a UK cohort of blood donors[@Sun2018]. There is evidence that proteins which change as a result of a higher BMI may contribute to thrombosis[@Constantinescu2018]: identification of such proteins is important in understanding how higher BMI causes disease and to identify targets which may benefit from pharmacological intervention. It is possible that proteins that are altered by BMI may contribute to thrombosis by activating platelets (Chapter \@ref(chemokine-platelets)).
 
-In this chapter, the aim is to measure associations between adiposity and the human proteome and to also estimate the underlying effects in a causal framework (Figure \@ref(fig:BMI-protein-graphic-INT)). Using data on 2737 participants from INTERVAL, the effects of BMI on 4034 (3622 unique) plasma protein traits will be estimated in both observational and MR frameworks. The specific effect of BMI on platelet proteins will be explored, as well as a disease enrichment analysis.
+In this chapter, the aim was to measure associations between adiposity and the human proteome and to also estimate the underlying effects in a causal framework (Figure \@ref(fig:BMI-protein-graphic-INT)). Using data on 2737 participants from INTERVAL, the effects of BMI on 4034 (3622 unique) plasma protein traits will be estimated in both observational and MR frameworks. The specific effect of BMI on platelet proteins will be explored, as well as a disease enrichment analysis.
 
 (ref:caption-BMI-protein-graphic-INT) **Schematic of the associations explored in Chapter \@ref(BMI-protein-MR).** This chapter explores the causal effect of BMI on the plasma proteome and explores whether these changes might contribute to CVD. Figure made using BioRender.com.
 (ref:scaption-BMI-protein-graphic-INT) Schematic of the associations explored in /@ref(BMI-protein-MR).
@@ -81,7 +81,7 @@ include_graphics(path = "figure/BMI_protein_INTERVAL/dendrogram.pdf", dpi = NA)
 ```
 \elandscape
 
-The association between BMI and specific platelet proteins were also explored. Here, GO pathways which include the term "platelet" were selected in AmiGO2 http://amigo.geneontology.org/ (Supplementary Table 1). These pathways were then searched in BioMart https://www.ensembl.org/biomart/martview/afd335dff2c91c86501d3f1f77b8b805, to provide a list of all the proteins involved in these platelet pathways (Supplementary Table 2). Unique proteins in Supplementary Table 2 were searched within the results to extract the estimate for BMI on platelet proteins. As the chemokines MDC and TARC were explored in the previous chapter, the specific effects of BMI on MDC and TARC were looked up.
+The association between BMI and specific platelet proteins were also explored. Here, GO pathways which include the term "platelet" were selected in AmiGO2 http://amigo.geneontology.org/ (Supplementary Table 1). These pathways were then searched in BioMart https://www.ensembl.org/biomart/martview/afd335dff2c91c86501d3f1f77b8b805, to provide a list of all the proteins involved in these platelet pathways (Supplementary Table 2). Unique proteins in Supplementary Table 2 were searched within the results to extract the estimate for BMI on platelet proteins. As the chemokines MDC and TARC were explored in the previous chapter and displayed an evidence for an effect on platelet function, and MDC was implicated in DVT in an MR framework, the specific effects of BMI on MDC and TARC were looked up.
 
 ### Enrichment analysis
 To investigate whether any protein groups showed a particularly strong relationship with BMI and disease (signal detection), protein features were clustered for further analysis. First, a principal component analysis (PCA; prcomp() function from the R "stats" package) on the proteins, not the individuals, was performed on the "pre-adjusted" (see above) dataset (Figure \@ref(fig:PCs)A-D). The top "n" PC eigenvectors, as identified by a scree plot of the PCA eigenvalues (Figure \@ref(fig:PCs)E), were carried forward into an unsupervised k-means analysis (kmeans() function from the R "stats" package). Nineteen k-means analyses were run altering the value of k (number of clusters) from two to 20. To identify an appropriate number of protein clusters (k) a scree like plot was generated (Figure \@ref(fig:PCs)F). Here the variance explained by clusters was plotted, for each k, as estimated as the sum of squares explained by clusters (betweenness) over the total sums of squares, and looked for the smallest k with the maximum variance explained (a plateau). In summary, a data reduction method (PCA) was used to identify major axes (PCs) of the protein data that were then utilised in a machine learning clustering algorithm (k-means) to identify clusters of proteins that share abundance similarities across individuals.
@@ -126,7 +126,7 @@ column_spec(1, width = "6cm") %>%
 
 In a linear regression model adjusted for age and sex among 2729 adults, BMI (per SD higher) was associated with 1576 proteins (39%) at the level P < 1.4 x 10^-5^ (multiple testing reference point, Supplementary Table 3). In a second model additionally adjusting for frequencies of smoking and alcohol intake among 2380 adults, there were 1447 associations at the same reference point (Supplementary Table 4). The strongest positive associations were with leptin (0.74 SD, 95% CI 0.71-0.77, P=9.9x10^-324^) and adipocyte fatty acid binding protein (FABP4) (0.58 SD, 95% CI 0.55-0.62, P=6.4x10^-211^). BMI (per SD) was also strongly positively associated with inflammatory proteins such as Complement Factor I (0.46 SD, 95% CI 0.43-0.50, P=5.6x10^-122^) and CRP (0.44 SD, 95% CI 0.41-0.48, P=8.2x10^-112^). BMI (per SD) also showed strong negative associations with proteins such as insulin-like growth factor-binding protein (IGFBP) 2 (-0.48 SD, 95% CI -0.51 to -0.44, P=2.7x10^-133^) and sex hormone-binding globulin (SHBG) (-0.43 SD, 95% CI -0.47 to -0.39, P=2.4x10^-106^). 
 
-There were 262 unique platelet proteins that were analysed in INTERVAL, 121 were associated with BMI in the confounder adjusted model (46%). There was evidence that proteins involved in platelet pathways were associated with BMI. Higher BMI was negatively associated with antithrombin-III (-0.26 SD, 95% CI -0.30 to -0.22, p=9.6x10^-42^). BMI was also negatively associated with platelet-activating factor acetylhydrolase (PAFAH) (-0.26 SD, 95% CI -0.30 to -0.23, p=4.9x10^-39^), as was platelet endothelial aggregation receptor 1 (PEAR1) (-0.20 SD, 95% CI -0.24 to -0.16, p=1.24x10^-23^). Other proteins that were negatively associated with BMI include platelet endothelial cell adhesion molecule (PECAM-1), platelet glycoprotein Ib alpha chain (GPIbα) and platelet-derived growth factor receptor beta (PDGF Rb) (Supplementary Table 4 & Supplementary Table 5). BMI was positively associated with the chemokine MDC (0.18 SD, 95% CI 0.14-0.22, p=3.6x10^-21^), but was not associated with TARC (Supplementary Table 3). 
+There were 262 unique platelet proteins that were analysed in INTERVAL, 121 were associated with BMI in the confounder adjusted model (46%). There was evidence that proteins involved in platelet pathways were associated with BMI. Higher BMI was negatively associated with antithrombin-III (-0.26 SD, 95% CI -0.30 to -0.22, p=9.6x10^-42^). BMI was also negatively associated with platelet-activating factor acetylhydrolase (PAFAH) (-0.26 SD, 95% CI -0.30 to -0.23, p=4.9x10^-39^), as was platelet endothelial aggregation receptor 1 (PEAR1) (-0.20 SD, 95% CI -0.24 to -0.16, p=1.24x10^-23^). Other proteins that were negatively associated with BMI include platelet endothelial cell adhesion molecule (PECAM-1), platelet glycoprotein Ib alpha chain (GPIbα) and platelet-derived growth factor receptor beta (PDGF Rb) (Supplementary Table 5). BMI was positively associated with the chemokine MDC (0.18 SD, 95% CI 0.14-0.22, p=3.6x10^-21^), but was not associated with TARC (Supplementary Table 3). 
 
 ### Observational associations of covariables with BMI and protein traits
 
@@ -316,7 +316,7 @@ This chapter explored the effect of BMI on a large set of circulating proteins i
 
 Previous work implementing MR to examine the relationship between BMI and ~1000 proteins (measured using the same SomaLogic array) provided corroborative evidence to that shown here[@Zaghlool2021]. Both studies suggested a positive association between BMI and leptin, as well as a negative association with SHBG. Other proteins, such as IGFBP1/2 and growth hormone receptor, did not pass the multiple testing threshold, but the direction and magnitude of estimates were in agreement, suggesting a possible causal effect that was not detectable in the current analysis. Building on previous work, the current chapter provides MR estimates for >3600 proteins, offering a wider proteomic profile and detecting additional associations such as that between BMI and fumarylacetoacetase and inhibin beta C chain. Furthermore, the inclusion of over threefold more proteins allowed a more comprehensive enrichment analysis to be performed.
 
-For proteins with stronger MR derived association evidence, it is important to explore whether they have a potential role in disease. Identification of individual proteins could help to guide future intervention if changes in proteins can be mapped to disease outcomes. These results suggest a strong positive effect of BMI on levels of leptin, a hormone released by white adipose tissue which suppresses appetite[@Klok2007]. The direction of effect agrees with estimates from previous cross-sectional and MR studies[@Wurtz2014; @Millard2015], indicating leptin receptor resistance[@Gruzdeva2019a]. There is observational evidence in humans that higher leptin can induce greater aggregation of platelets (cells involved in haemostasis)[@Nakata1999]. In a larger observational study, leptin was found to be associated with higher risk of coronary events independent of BMI[@Wallace2001].
+For proteins with stronger MR derived association evidence, it is important to explore whether they have a potential role in disease. Identification of individual proteins could help to guide future intervention if changes in proteins can be mapped to disease outcomes. These results suggest a strong positive effect of BMI on levels of leptin, a hormone released by white adipose tissue which suppresses appetite[@Klok2007]. The direction of effect agrees with estimates from previous cross-sectional and MR studies[@Wurtz2014; @Millard2015], indicating leptin receptor resistance[@Gruzdeva2019a]. There is observational evidence in humans that higher leptin can induce greater aggregation of platelets[@Nakata1999]. In a larger observational study, leptin was found to be associated with higher risk of coronary events independent of BMI[@Wallace2001].
 
 These results help to provide contextualisation for proteins which have already been implicated in disease. For example, results suggest a strong positive effect of BMI on FABP4, an adipokine found primarily in adipocytes and macrophages[@Furuhashi2014]. This MR estimate supports the association which has been suggested in previous observational studies[@Xu2006]. FABP4 has been implicated in cardiometabolic disease: a SNP which increases FABP4 was found to raise the odds of type II diabetes among adults[@Gudmundsdottir2020], potentially through its contribution to higher insulin resistance[@Nakamura2017]. FABP4 has also been associated with higher risk of atherosclerosis among adults[@Yeung2007]. A strong SHBG-lowering effect of higher BMI was also suggested here. The SHBG molecule is a glycoprotein which binds androgens and oestrogens and suppresses their activity[@Wallace2013]; a reduction in SHBG is therefore expected to lead to higher levels of circulating sex hormones. The negative effect of BMI on SHBG seen here supports observational findings[@Cooper2015; @Goto2014; @Baglietto2009]. When evaluating the role of SHBG in disease, MR analysis suggests that an increase in SHBG contributes to a decrease in risk of cardioembolic stroke[@Zheng2020]. Other studies have also implicated lower SHBG levels in increasing type II diabetes risk [@Ritchie2019]. The exact mechanisms leading from decreased SBHG to ill-health is unclear, but may arise as a result of the increased bioavailability of testosterone and oestrogen[@Wallace2013]. Studies exploring the effect of oestrogen platelet function have indicated that 17β-estradiol can potentiate the activation of integrin α~IIb~β~3~ in response to submaximal concentrations of thrombin, which could be blocked by an oestrogen receptor antagonist[@Moro2005].
 
